--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
-    "expo": "~49.0.5",
-    "expo-file-system": "~15.4.3",
-    "expo-image-picker": "~14.3.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.28",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-status-bar": "~1.12.1",
     "fonts": "^0.0.2",
-    "openai": "^3.3.0",
+    "openai": "^4.55.7",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "^0.74.5",
     "react-native-gifted-chat": "^2.4.0"
   },
   "devDependencies": {
